// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coblocks/media-card should render 1`] = `
"<!-- wp:coblocks/media-card -->
<div class="wp-block-coblocks-media-card alignwide is-style-left has-no-media"><div class="wp-block-coblocks-media-card__inner has-no-padding"><div class="wp-block-coblocks-media-card__wrapper"><figure class="wp-block-coblocks-media-card__media"></figure><div class="wp-block-coblocks-media-card__content"></div></div></div></div>
<!-- /wp:coblocks/media-card -->"
`;

exports[`coblocks/media-card should render padding classes 1`] = `
"<!-- wp:coblocks/media-card {"paddingSize":"none"} -->
<div class="wp-block-coblocks-media-card alignwide is-style-left has-no-media"><div class="wp-block-coblocks-media-card__inner has-padding has-none-padding"><div class="wp-block-coblocks-media-card__wrapper"><figure class="wp-block-coblocks-media-card__media"></figure><div class="wp-block-coblocks-media-card__content"></div></div></div></div>
<!-- /wp:coblocks/media-card -->"
`;

exports[`coblocks/media-card should render padding classes 2`] = `
"<!-- wp:coblocks/media-card {"paddingSize":"small"} -->
<div class="wp-block-coblocks-media-card alignwide is-style-left has-no-media"><div class="wp-block-coblocks-media-card__inner has-padding has-small-padding"><div class="wp-block-coblocks-media-card__wrapper"><figure class="wp-block-coblocks-media-card__media"></figure><div class="wp-block-coblocks-media-card__content"></div></div></div></div>
<!-- /wp:coblocks/media-card -->"
`;

exports[`coblocks/media-card should render padding classes 3`] = `
"<!-- wp:coblocks/media-card {"paddingSize":"medium"} -->
<div class="wp-block-coblocks-media-card alignwide is-style-left has-no-media"><div class="wp-block-coblocks-media-card__inner has-padding has-medium-padding"><div class="wp-block-coblocks-media-card__wrapper"><figure class="wp-block-coblocks-media-card__media"></figure><div class="wp-block-coblocks-media-card__content"></div></div></div></div>
<!-- /wp:coblocks/media-card -->"
`;

exports[`coblocks/media-card should render padding classes 4`] = `
"<!-- wp:coblocks/media-card {"paddingSize":"large"} -->
<div class="wp-block-coblocks-media-card alignwide is-style-left has-no-media"><div class="wp-block-coblocks-media-card__inner has-padding has-large-padding"><div class="wp-block-coblocks-media-card__wrapper"><figure class="wp-block-coblocks-media-card__media"></figure><div class="wp-block-coblocks-media-card__content"></div></div></div></div>
<!-- /wp:coblocks/media-card -->"
`;

exports[`coblocks/media-card should render padding classes 5`] = `
"<!-- wp:coblocks/media-card {"paddingSize":"huge"} -->
<div class="wp-block-coblocks-media-card alignwide is-style-left has-no-media"><div class="wp-block-coblocks-media-card__inner has-padding has-huge-padding"><div class="wp-block-coblocks-media-card__wrapper"><figure class="wp-block-coblocks-media-card__media"></figure><div class="wp-block-coblocks-media-card__content"></div></div></div></div>
<!-- /wp:coblocks/media-card -->"
`;

exports[`coblocks/media-card should render with align attribute 1`] = `
"<!-- wp:coblocks/media-card {"align":"full","maxWidth":"100px"} -->
<div class="wp-block-coblocks-media-card alignfull is-style-left has-no-media"><div class="wp-block-coblocks-media-card__inner has-no-padding"><div class="wp-block-coblocks-media-card__wrapper" style="max-width:100px"><figure class="wp-block-coblocks-media-card__media"></figure><div class="wp-block-coblocks-media-card__content"></div></div></div></div>
<!-- /wp:coblocks/media-card -->"
`;

exports[`coblocks/media-card should render with align attribute 2`] = `
"<!-- wp:coblocks/media-card {"maxWidth":"100px"} -->
<div class="wp-block-coblocks-media-card alignwide is-style-left has-no-media"><div class="wp-block-coblocks-media-card__inner has-no-padding"><div class="wp-block-coblocks-media-card__wrapper" style="max-width:100px"><figure class="wp-block-coblocks-media-card__media"></figure><div class="wp-block-coblocks-media-card__content"></div></div></div></div>
<!-- /wp:coblocks/media-card -->"
`;

exports[`coblocks/media-card should render with appropriate id class 1`] = `
"<!-- wp:coblocks/media-card -->
<div class="wp-block-coblocks-media-card alignwide is-style-left has-no-media coblocks-media-card-1234"><div class="wp-block-coblocks-media-card__inner has-no-padding"><div class="wp-block-coblocks-media-card__wrapper"><figure class="wp-block-coblocks-media-card__media"></figure><div class="wp-block-coblocks-media-card__content"></div></div></div></div>
<!-- /wp:coblocks/media-card -->"
`;

exports[`coblocks/media-card should render with background image attributes 1`] = `
"<!-- wp:coblocks/media-card {"backgroundImg":"150x150.png","backgroundSize":"contain","backgroundOverlay":50,"focalPoint":{"x":0.6352941176470588,"y":0.3729411405675552},"mediaPosition":"right","mediaType":"image","hasImgShadow":true} -->
<div class="wp-block-coblocks-media-card is-style-right"><div class="wp-block-coblocks-media-card__inner has-background-overlay bg-contain has-background-image bg-no-repeat" style="background-image:url(150x150.png);background-position:63.52941176470588% 37.29411405675552%"><div class="wp-block-coblocks-media-card__wrapper" style="grid-template-columns:auto undefined%"><figure class="wp-block-coblocks-media-card__media has-shadow"><img src="150x150.png"/></figure><div class="wp-block-coblocks-media-card__content"></div></div></div></div>
<!-- /wp:coblocks/media-card -->"
`;

exports[`coblocks/media-card should render with background image attributes with media id 1`] = `
"<!-- wp:coblocks/media-card {"backgroundImg":"150x150.png","backgroundSize":"contain","backgroundOverlay":50,"focalPoint":{"x":0.6352941176470588,"y":0.3729411405675552},"mediaPosition":"right","mediaId":"1234","mediaType":"image","hasImgShadow":true} -->
<div class="wp-block-coblocks-media-card is-style-right"><div class="wp-block-coblocks-media-card__inner has-background-overlay bg-contain has-background-image bg-no-repeat" style="background-image:url(150x150.png);background-position:63.52941176470588% 37.29411405675552%"><div class="wp-block-coblocks-media-card__wrapper" style="grid-template-columns:auto undefined%"><figure class="wp-block-coblocks-media-card__media has-shadow"><img src="150x150.png" class="wp-image-1234"/></figure><div class="wp-block-coblocks-media-card__content"></div></div></div></div>
<!-- /wp:coblocks/media-card -->"
`;

exports[`coblocks/media-card should render with background video attributes 1`] = `
"<!-- wp:coblocks/media-card {"backgroundType":"video","backgroundImg":"150x150.mp4","mediaType":"video","hasCardShadow":true} -->
<div class="wp-block-coblocks-media-card alignwide is-style-left"><div class="wp-block-coblocks-media-card__inner has-background-video has-no-padding"><div class="coblocks-video-bg position-absolute overflow-hidden w-full h-full pin-t pin-r pin-b pin-l"><video class="w-full h-full bg-center-center object-cover object-position" playsinline autoplay muted loop src="150x150.mp4"></video></div><div class="wp-block-coblocks-media-card__wrapper"><figure class="wp-block-coblocks-media-card__media"><video controls src="150x150.mp4"></video></figure><div class="wp-block-coblocks-media-card__content has-shadow"></div></div></div></div>
<!-- /wp:coblocks/media-card -->"
`;

exports[`coblocks/media-card should render with className attribute 1`] = `
"<!-- wp:coblocks/media-card {"className":"my-custom-class"} -->
<div class="wp-block-coblocks-media-card alignwide is-style-left has-no-media my-custom-class"><div class="wp-block-coblocks-media-card__inner has-no-padding"><div class="wp-block-coblocks-media-card__wrapper"><figure class="wp-block-coblocks-media-card__media"></figure><div class="wp-block-coblocks-media-card__content"></div></div></div></div>
<!-- /wp:coblocks/media-card -->"
`;

exports[`coblocks/media-card should render with grid template column classes 1`] = `
"<!-- wp:coblocks/media-card {"mediaWidth":"100"} -->
<div class="wp-block-coblocks-media-card alignwide is-style-left has-no-media"><div class="wp-block-coblocks-media-card__inner has-no-padding"><div class="wp-block-coblocks-media-card__wrapper" style="grid-template-columns:100% auto"><figure class="wp-block-coblocks-media-card__media"></figure><div class="wp-block-coblocks-media-card__content"></div></div></div></div>
<!-- /wp:coblocks/media-card -->"
`;

exports[`coblocks/media-card should render with grid template column classes 2`] = `
"<!-- wp:coblocks/media-card {"mediaPosition":"right","mediaWidth":"100"} -->
<div class="wp-block-coblocks-media-card alignwide is-style-right has-no-media"><div class="wp-block-coblocks-media-card__inner has-no-padding"><div class="wp-block-coblocks-media-card__wrapper" style="grid-template-columns:auto 100%"><figure class="wp-block-coblocks-media-card__media"></figure><div class="wp-block-coblocks-media-card__content"></div></div></div></div>
<!-- /wp:coblocks/media-card -->"
`;
